# docrest

./: .gitignore  README.md  pyproject.toml
examples/: sample.docx  sample.html  sample.md  sample.mmd
packaging/homebrew/: README.md  docrest.rb  generate_resources.sh
skills/docrest-convert/: SKILL.md
skills/docrest-diagram/: SKILL.md
src/docrest/: __init__.py  cli.py
src/docrest/converters/: __init__.py  base.py  diagrams.py  docx.py  markdown.py  pdf.py  registry.py  txt.py
src/docrest/core/: __init__.py  detect.py  install.py
tests/: test_cli.py  test_detect.py  test_docx_txt.py  test_markdown.py  test_registry.py
