[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docrest"
version = "0.1.0"
description = "CLI and skills for converting documentation between formats (docx, md, txt, pdf, diagrams)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "docrest" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "markdown-it-py>=3.0.0",
    "python-docx>=1.1.0",
    "pypandoc>=1.13",
    "weasyprint>=62.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
diagrams = [
    "plantuml-markdown>=3.10",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[project.scripts]
docrest = "docrest.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/docrest"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
